<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Basic application strings -->
    <string name="app_name">Random Image</string>
    <string name="app_name_short">Random Image</string>
    <string name="has_premium" translatable="false">false</string>
    <string name="mini_widget_name">Random Image Widget</string>
    <string name="image_widget_name">Random Image Frame</string>
    <string name="stacked_image_widget_name">Random Image Deck</string>
    <string name="default_list_name">All Images</string>
    <string name="title_icon_main_configuration">Random Image Setup</string>

    <!-- Activity titles -->
    <string name="title_activity_display_image_details">Image Details</string>
    <string name="title_activity_display_folder_details">Folder Details</string>
    <string name="title_activity_display_list_info">List Details</string>
    <string name="title_activity_display_nested_list_info">Nested List Details</string>
    <string name="title_activity_main_configuration">Setup Image Lists</string>
    <string name="title_activity_main_configuration_backup">Backup Image Lists</string>
    <string name="title_activity_main_configuration_restore">Restore Image Lists</string>
    <string name="title_activity_main_configuration_delete">Delete Image Lists</string>
    <string name="title_activity_configure_image_list">Configure Image List</string>
    <string name="title_activity_display_images_from_folder">Display image folder</string>
    <string name="title_activity_add_images">Add images</string>
    <string name="title_activity_add_folders">Add folders</string>
    <string name="title_activity_select_widget_icon">Select Widget Icon</string>
    <string name="title_activity_remove_images">Remove images</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_widget_settings">Widget Settings</string>
    <string name="title_activity_notification_settings">Notification Settings</string>

    <!-- Button texts -->
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_remove">Remove</string>
    <string name="button_overwrite">Overwrite</string>
    <string name="button_dont_show">Do not show again</string>
    <string name="button_show_later">Show later</string>
    <string name="button_add_folder">Add folder</string>
    <string name="button_add_nested_list">Add nested list</string>
    <string name="button_finish_widget_configuration">Finish Widget Configuration</string>
    <string name="button_finish_shortcut_configuration">Finish Shortcut Configuration</string>
    <string name="button_run_widget">Run Widget</string>
    <string name="button_run_shortcut">Run Shortcut</string>
    <string name="button_missing_images">Missing images</string>
    <string name="button_widgets">Random Image Widgets</string>
    <string name="button_notifications">Random Image Notifications</string>
    <string name="button_clone_list">Clone List</string>
    <string name="button_rename_list">Rename List</string>
    <string name="button_delete_list">Delete List</string>
    <string name="button_backup_list">Backup List</string>
    <string name="button_restore_list">Restore List</string>
    <string name="button_create_shortcut">Create Shortcut</string>
    <string name="button_continue">Continue</string>
    <string name="button_view_in_gallery">View in gallery</string>
    <string name="button_send_to">Send to&#8230;</string>
    <string name="button_show_on_map">Show on map</string>
    <string name="button_select">Select</string>

    <!-- Info texts shown in activities. -->
    <string name="text_info_select_image_folder_for_add">Select the folder from which you want to add images to the image list.</string>
    <string name="text_info_select_image_folders_for_add">Select the folders which you want to add to the image list.</string>
    <string name="text_info_select_widget_icon">Select the image that you want to use as widget icon.</string>
    <string name="text_info_select_lists_for_backup">Select the image lists that you want to back up.</string>
    <string name="text_info_select_lists_for_restore">Select the image lists that you want to restore.</string>
    <string name="text_info_select_lists_for_delete">Select the image lists that you want to delete.</string>
    <string name="text_info_select_images_for_remove">Select the folders and images that you want to remove from the image list.</string>
    <string name="text_info_image_lists">My image lists</string>
    <string name="text_info_image_list_backups">Existing backups</string>
    <string name="text_info_empty_list">Your random image list is empty. Please press the “+” symbol on top in order to add images or folders to the list.</string>

    <!-- Other texts -->
    <string name="text_initializing">Initializing&#8230;</string>
    <string name="text_loading">Loading image list&#8230;</string>
    <string name="text_no_image">No image available</string>
    <string name="hint_search_path">Filter name</string>

    <!-- Strings for image info -->
    <string name="info_parent_folder"><![CDATA[<b>Location:</b> %1$s]]></string>
    <string name="info_file_date"><![CDATA[<b>Date:</b> %1$s]]></string>
    <string name="info_number_of_images"><![CDATA[<b>Number of images:</b> %1$d]]></string>
    <string name="info_number_of_images_loading">Determining the number of images&#8230;</string>
    <string name="info_number_of_images_and_proportion"><![CDATA[<b>Number of images:</b> %1$d (%2$s%%)]]></string>
    <string name="info_nested_list_view_frequency">View Frequency:</string>
    <string name="percent" translatable="false">%</string>
    <string name="info_photo_location">Photo location</string>

</resources>
